// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common Components: Dialog should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-dialog mdc-dialog--open"
      >
        <div
          class="mdc-dialog__container"
        >
          <div
            aria-describedby="dialog-content-0"
            aria-labelledby="dialog-title-0"
            aria-modal="true"
            class="mdc-dialog__surface"
            role="alertdialog"
          >
            <h2
              class="mdc-dialog__title"
              id="dialog-title-0"
            >
              &lt;h3&gt;Dialog Title&lt;/h3&gt;
            </h2>
            <div
              class="mdc-dialog__content"
              id="dialog-content-0"
            >
              &lt;p&gt;Dialog Content&lt;/p&gt;
            </div>
            <div
              class="mdc-dialog__actions"
            >
              &lt;button&gt;Save&lt;/button&gt;
            </div>
          </div>
        </div>
        <div
          class="mdc-dialog__scrim"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-dialog mdc-dialog--open"
    >
      <div
        class="mdc-dialog__container"
      >
        <div
          aria-describedby="dialog-content-0"
          aria-labelledby="dialog-title-0"
          aria-modal="true"
          class="mdc-dialog__surface"
          role="alertdialog"
        >
          <h2
            class="mdc-dialog__title"
            id="dialog-title-0"
          >
            &lt;h3&gt;Dialog Title&lt;/h3&gt;
          </h2>
          <div
            class="mdc-dialog__content"
            id="dialog-content-0"
          >
            &lt;p&gt;Dialog Content&lt;/p&gt;
          </div>
          <div
            class="mdc-dialog__actions"
          >
            &lt;button&gt;Save&lt;/button&gt;
          </div>
        </div>
      </div>
      <div
        class="mdc-dialog__scrim"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Common Components: Dialog should match snapshot when dialog is not open 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-dialog"
      >
        <div
          class="mdc-dialog__container"
        >
          <div
            aria-describedby="dialog-content-1"
            aria-labelledby="dialog-title-1"
            aria-modal="true"
            class="mdc-dialog__surface"
            role="alertdialog"
          >
            <h2
              class="mdc-dialog__title"
              id="dialog-title-1"
            >
              &lt;h3&gt;Dialog Title&lt;/h3&gt;
            </h2>
            <div
              class="mdc-dialog__content"
              id="dialog-content-1"
            >
              &lt;p&gt;Dialog Content&lt;/p&gt;
            </div>
            <div
              class="mdc-dialog__actions"
            >
              &lt;button&gt;Save&lt;/button&gt;
            </div>
          </div>
        </div>
        <div
          class="mdc-dialog__scrim"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-dialog"
    >
      <div
        class="mdc-dialog__container"
      >
        <div
          aria-describedby="dialog-content-1"
          aria-labelledby="dialog-title-1"
          aria-modal="true"
          class="mdc-dialog__surface"
          role="alertdialog"
        >
          <h2
            class="mdc-dialog__title"
            id="dialog-title-1"
          >
            &lt;h3&gt;Dialog Title&lt;/h3&gt;
          </h2>
          <div
            class="mdc-dialog__content"
            id="dialog-content-1"
          >
            &lt;p&gt;Dialog Content&lt;/p&gt;
          </div>
          <div
            class="mdc-dialog__actions"
          >
            &lt;button&gt;Save&lt;/button&gt;
          </div>
        </div>
      </div>
      <div
        class="mdc-dialog__scrim"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
